Prevent name from overflowing

--- a/src/components/DetailSection/scss/_name-big.scss
+++ b/src/components/DetailSection/scss/_name-big.scss
@@ -9,7 +9,6 @@
         height: 50px;
         margin: 8px 0 0 0;
         font-size: 2.5em;
-        overflow-x: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
       }
