--- a/src/components/DetailSection/scss/_name.scss
+++ b/src/components/DetailSection/scss/_name.scss
@@ -22,9 +22,11 @@
 
     .name {
       width: 100%;
+      height: 72px;
       margin: 0;
       font-family: Dosis, sans-serif;
       font-size: 1.75em;
+      overflow-x: hidden;
     }
   }
 }
